[package]
name = "ygg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["rc", "derive"] }
rand = "0.8"
rand_chacha = "0.3"
smallvec = { version = "1.10", features = ["union", "const_generics", "const_new"] }
tokio = { version = "1.27", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
log = "0.4"
async-trait = "0.1"
bytes = "1.4.0"
futures-util = {version = "0.3.28", features = ["sink"] }
serde_json = "1.0"
wrtc = "^0.2"

[dev-dependencies]
turmoil = "0.5"
env_logger = "0.10.0"